Rating popup need to be coded!

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -160,6 +160,30 @@
                             android:layout_columnWeight="1"
                             android:layout_gravity="fill" />
 
+                        <include
+                            layout="@layout/shopping_item_shimmer_layout"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_rowWeight="1"
+                            android:layout_columnWeight="1"
+                            android:layout_gravity="fill" />
+
+                        <include
+                            layout="@layout/shopping_item_shimmer_layout"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_rowWeight="1"
+                            android:layout_columnWeight="1"
+                            android:layout_gravity="fill" />
+
+                        <include
+                            layout="@layout/shopping_item_shimmer_layout"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_rowWeight="1"
+                            android:layout_columnWeight="1"
+                            android:layout_gravity="fill" />
+
                     </GridLayout>
 
                 </com.facebook.shimmer.ShimmerFrameLayout>
