--- a/app/src/main/res/layout/fragment_ratings.xml
+++ b/app/src/main/res/layout/fragment_ratings.xml
@@ -7,6 +7,7 @@
     tools:context=".ProfileSubFragments.RatingsFragment">
 
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/ratings_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -44,5 +45,40 @@
             android:textSize="20sp" />
 
     </androidx.appcompat.widget.Toolbar>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/ratings_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/ratings_tool_bar"
+        android:layout_margin="5dp"
+        android:visibility="gone" />
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/rating_items_shimmer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ratings_tool_bar">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/rating_item_shimmer_layout" />
+
+            <include layout="@layout/rating_item_shimmer_layout" />
+
+            <include layout="@layout/rating_item_shimmer_layout" />
+
+            <include layout="@layout/rating_item_shimmer_layout" />
+
+            <include layout="@layout/rating_item_shimmer_layout" />
+
+            <include layout="@layout/rating_item_shimmer_layout" />
+
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
 </RelativeLayout>
