--- a/app/src/main/res/drawable/ic__dot_menu.xml
+++ b/app/src/main/res/drawable/ic__dot_menu.xml
@@ -1,15 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="4dp"
     android:height="20dp"
     android:viewportWidth="4"
     android:viewportHeight="20">
-  <path
-      android:pathData="M2,4C3.1046,4 4,3.1046 4,2C4,0.8954 3.1046,0 2,0C0.8954,0 0,0.8954 0,2C0,3.1046 0.8954,4 2,4Z"
-      android:fillColor="#333333"/>
-  <path
-      android:pathData="M2,12C3.1046,12 4,11.1046 4,10C4,8.8954 3.1046,8 2,8C0.8954,8 0,8.8954 0,10C0,11.1046 0.8954,12 2,12Z"
-      android:fillColor="#333333"/>
-  <path
-      android:pathData="M2,20C3.1046,20 4,19.1046 4,18C4,16.8954 3.1046,16 2,16C0.8954,16 0,16.8954 0,18C0,19.1046 0.8954,20 2,20Z"
-      android:fillColor="#333333"/>
+    <path
+        android:fillColor="#333333"
+        android:pathData="M2,4C3.1046,4 4,3.1046 4,2C4,0.8954 3.1046,0 2,0C0.8954,0 0,0.8954 0,2C0,3.1046 0.8954,4 2,4Z" />
+    <path
+        android:fillColor="#333333"
+        android:pathData="M2,12C3.1046,12 4,11.1046 4,10C4,8.8954 3.1046,8 2,8C0.8954,8 0,8.8954 0,10C0,11.1046 0.8954,12 2,12Z" />
+    <path
+        android:fillColor="#333333"
+        android:pathData="M2,20C3.1046,20 4,19.1046 4,18C4,16.8954 3.1046,16 2,16C0.8954,16 0,16.8954 0,18C0,19.1046 0.8954,20 2,20Z" />
 </vector>
