--- a/app/src/main/res/layout/fragment_ratings.xml
+++ b/app/src/main/res/layout/fragment_ratings.xml
@@ -81,4 +81,15 @@
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
+    <TextView
+        android:id="@+id/no_results_found_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:fontFamily="@font/worksans_medium"
+        android:gravity="center"
+        android:text="No results found!"
+        android:textSize="18sp"
+        android:visibility="gone" />
+
 </RelativeLayout>
