--- a/app/src/main/res/layout/rating_item.xml
+++ b/app/src/main/res/layout/rating_item.xml
@@ -6,17 +6,15 @@
     android:layout_margin="5dp"
     android:background="@color/white"
     android:baselineAligned="false"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
     android:orientation="horizontal"
     android:weightSum="2">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/rating_item_pop_up_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1.8">
+        android:layout_weight="1.8"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/rating_shop_name"
@@ -28,40 +26,72 @@
             android:textColor="@color/black"
             android:textSize="17sp" />
 
-        <RatingBar
-            android:id="@+id/rating_item_rating_bar"
-            style="?android:attr/ratingBarStyleSmall"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/review_heading"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/rating_shop_name"
             android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="15dp"
-            android:numStars="5"
-            android:progressTint="@color/primary_blue"
-            android:rating="1.5"
-            android:stepSize="1" />
+            android:fontFamily="@font/worksans_medium"
+            android:text="Review"
+            android:textColor="@color/primary_blue"
+            android:textSize="17sp"
+            android:visibility="gone" />
 
         <TextView
-            android:id="@+id/rating_item_time_stamp"
-            android:layout_width="wrap_content"
+            android:id="@+id/customer_review"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/rating_shop_name"
-            android:layout_alignParentEnd="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/worksans_regular"
+            android:text="No review written!"
+            android:textColor="@color/lightBlack"
+            android:textSize="16sp"
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="15dp"
-            android:fontFamily="@font/worksans_regular"
-            android:text="Sun Nov 14 3:39 PM"
-            android:textColor="@color/primary_blue" />
+            android:orientation="horizontal">
 
-    </RelativeLayout>
+            <RatingBar
+                android:id="@+id/rating_item_rating_bar"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:numStars="5"
+                android:progressTint="@color/primary_blue"
+                android:rating="1.5"
+                android:stepSize="1" />
+
+            <TextView
+                android:id="@+id/rating_item_time_stamp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/worksans_regular"
+                android:gravity="end"
+                android:text="Sun Nov 14 3:39 PM"
+                android:textColor="@color/primary_blue" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/rating_item_menu_button"
+        android:id="@+id/rating_item_expand_button"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="0.2"
+        android:animateLayoutChanges="true"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         app:cardCornerRadius="30dp"
         app:cardElevation="0dp">
 
@@ -70,7 +100,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/ic__dot_menu" />
+            android:rotation="90"
+            android:src="@drawable/ic_next" />
 
     </androidx.cardview.widget.CardView>
 
