--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -91,27 +91,39 @@
                         android:textColor="@color/light_blue"
                         android:textSize="15sp" />
 
-                    <com.google.android.material.textfield.TextInputLayout
+                    <TextView
+                        android:id="@+id/cart_item_quantity_text_view"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="5dp"
                         android:layout_weight="0.7"
-                        android:background="@drawable/profile_tabs_background"
-                        android:backgroundTint="@color/child_tabs_inactive"
-                        android:gravity="center">
-
-                        <TextView
-                            android:id="@+id/autoCompleteTextView"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:inputType="none"
-                            android:text="1" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
+                        android:background="@drawable/search_background"
+                        android:fontFamily="@font/worksans_medium"
+                        android:gravity="center"
+                        android:inputType="none"
+                        android:padding="10dp"
+                        android:text="1" />
 
                 </LinearLayout>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/delete_cart_item"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="15dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:cardCornerRadius="35dp"
+                    app:cardElevation="0dp">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="8dp"
+                        android:src="@drawable/ic_delete" />
+
+                </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
