--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -55,4 +55,14 @@
         android:layout_margin="5dp"
         android:visibility="visible" />
 
+    <TextView
+        android:id="@+id/history_no_results_text_View"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:fontFamily="@font/worksans_medium"
+        android:text="No results found!"
+        android:textSize="17sp" />
+
 </RelativeLayout>
