--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -179,56 +179,56 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/profile_settings_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/profile_history_button"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/search_background"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:orientation="horizontal">
+    <!--    <LinearLayout-->
+    <!--        android:id="@+id/profile_settings_button"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_below="@+id/profile_history_button"-->
+    <!--        android:layout_marginStart="25dp"-->
+    <!--        android:layout_marginTop="10dp"-->
+    <!--        android:layout_marginEnd="20dp"-->
+    <!--        android:background="@drawable/search_background"-->
+    <!--        android:clickable="true"-->
+    <!--        android:focusable="true"-->
+    <!--        android:foreground="?android:attr/selectableItemBackground"-->
+    <!--        android:orientation="horizontal">-->
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_margin="1dp"
-            app:cardBackgroundColor="#FFD237"
-            app:cardCornerRadius="500dp">
+    <!--        <androidx.cardview.widget.CardView-->
+    <!--            android:layout_width="55dp"-->
+    <!--            android:layout_height="55dp"-->
+    <!--            android:layout_margin="1dp"-->
+    <!--            app:cardBackgroundColor="#FFD237"-->
+    <!--            app:cardCornerRadius="500dp">-->
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:contentDescription="@string/app_name"
-                android:src="@drawable/ic_settings" />
+    <!--            <ImageView-->
+    <!--                android:layout_width="wrap_content"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_gravity="center"-->
+    <!--                android:contentDescription="@string/app_name"-->
+    <!--                android:src="@drawable/ic_settings" />-->
 
-        </androidx.cardview.widget.CardView>
+    <!--        </androidx.cardview.widget.CardView>-->
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="10dp"
-            android:fontFamily="@font/worksans_medium"
-            android:gravity="center_vertical"
-            android:letterSpacing="0.05"
-            android:text="Settings"
-            android:textColor="@color/black"
-            android:textSize="17sp"
-            app:drawableEndCompat="@drawable/ic_next" />
+    <!--        <TextView-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:layout_marginStart="15dp"-->
+    <!--            android:layout_marginEnd="10dp"-->
+    <!--            android:fontFamily="@font/worksans_medium"-->
+    <!--            android:gravity="center_vertical"-->
+    <!--            android:letterSpacing="0.05"-->
+    <!--            android:text="Settings"-->
+    <!--            android:textColor="@color/black"-->
+    <!--            android:textSize="17sp"-->
+    <!--            app:drawableEndCompat="@drawable/ic_next" />-->
 
-    </LinearLayout>
+    <!--    </LinearLayout>-->
 
     <LinearLayout
         android:id="@+id/profile_ratings_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/profile_settings_button"
+        android:layout_below="@+id/profile_history_button"
         android:layout_marginStart="25dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
