--- a/app/src/main/res/layout/fragment_item_expanded.xml
+++ b/app/src/main/res/layout/fragment_item_expanded.xml
@@ -59,9 +59,10 @@
                 app:cardCornerRadius="5dp">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:contentDescription="@string/app_name"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/sample_item_image" />
 
             </androidx.cardview.widget.CardView>
