--- a/app/src/main/res/layout/fragment_payment_details.xml
+++ b/app/src/main/res/layout/fragment_payment_details.xml
@@ -369,4 +369,14 @@
         android:textSize="18sp"
         android:visibility="visible" />
 
+    <ProgressBar
+        android:id="@+id/place_order_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="15dp"
+        android:backgroundTint="@color/primary_blue"
+        android:visibility="invisible" />
+
 </RelativeLayout>
